# ChangeLog for gnustep-libs/popplerkit
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnustep-libs/popplerkit/Attic/ChangeLog,v 1.26 2012/08/08 16:50:30 dilfridge Exp $

  08 Aug 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  popplerkit-0.4.1.ebuild:
  xpdf-headers useflag for poppler is going away

  02 May 2012; Jeff Horelick <jdhore@gentoo.org> popplerkit-0.4.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  10 Feb 2010; Bernard Cafarelli <voyageur@gentoo.org>
  -popplerkit-0.2.ebuild, -popplerkit-0.4.0-r1.ebuild:
  Drop old versions

  10 Feb 2010; Samuli Suominen <ssuominen@gentoo.org> popplerkit-0.2.ebuild,
  popplerkit-0.4.0-r1.ebuild, popplerkit-0.4.1.ebuild:
  Fix poppler depend.

  19 Jul 2009; nixnut <nixnut@gentoo.org> popplerkit-0.4.1.ebuild:
  ppc stable #273704

  11 Jun 2009; Markus Meier <maekke@gentoo.org> popplerkit-0.4.1.ebuild:
  amd64 stable, bug #273704

  11 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  popplerkit-0.4.1.ebuild:
  stable x86, bug 273704

  30 Mar 2009; Peter Alfredsen <loki_val@gentoo.org> popplerkit-0.2.ebuild,
  popplerkit-0.4.0-r1.ebuild, popplerkit-0.4.1.ebuild:
  Update dependencies w.r.t. bug 264230, fully-split-out poppler transition.

*popplerkit-0.4.1 (23 Mar 2009)

  23 Mar 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +popplerkit-0.4.1.ebuild:
  Version bump from Etoile 0.4.1

  05 Mar 2009; Bernard Cafarelli <voyageur@gentoo.org>
  popplerkit-0.4.0-r1.ebuild:
  Filter out -Werror during build

*popplerkit-0.4.0-r1 (08 Dec 2008)

  08 Dec 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +files/popplerkit-0.4.0-config-as-needed.patch, -popplerkit-0.4.0.ebuild,
  +popplerkit-0.4.0-r1.ebuild:
  Fix --as-needed support, bug #250175

  17 Nov 2008; Bernard Cafarelli <voyageur@gentoo.org>
  popplerkit-0.4.0.ebuild:
  Fix compilation on MissingKit

*popplerkit-0.4.0 (17 Nov 2008)

  17 Nov 2008; Bernard Cafarelli <voyageur@gentoo.org>