@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnustep-libs/popplerkit/Attic/popplerkit-0.4.1.ebuild,v 1.8 2012/08/08 16:50:30 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnustep-libs/popplerkit/Attic/popplerkit-0.4.1.ebuild,v 1.9 2012/08/08 17:22:33 dilfridge Exp $
 
 EAPI=2
 
@@ -16,8 +16,7 @@ KEYWORDS="amd64 ppc x86"
 SLOT="0"
 IUSE=""
 
-# Check me. Is xpdf-headers required?
-RDEPEND="|| ( <app-text/poppler-0.20.2-r2[xpdf-headers] >=app-text/poppler-0.20.2-r2 )
+RDEPEND=">=app-text/poppler-0.18.4-r2
 	>=media-libs/freetype-2"
 DEPEND="${RDEPEND}
 	virtual/pkgconfig"
