@@ -1,6 +1,10 @@
 # ChangeLog for gnustep-libs/popplerkit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnustep-libs/popplerkit/Attic/ChangeLog,v 1.26 2012/08/08 16:50:30 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnustep-libs/popplerkit/Attic/ChangeLog,v 1.27 2012/08/08 17:22:33 dilfridge Exp $
+
+  08 Aug 2012; Andreas K. Huettel <dilfridge@gentoo.org>
+  popplerkit-0.4.1.ebuild:
+  poppler xpdf-headers useflag is gone
 
   08 Aug 2012; Andreas K. Huettel <dilfridge@gentoo.org>
   popplerkit-0.4.1.ebuild:
